--- a/.github/workflows/test_python.yaml
+++ b/.github/workflows/test_python.yaml
@@ -1,9 +1,13 @@
-name: Run Tests for Baekjoon Problems (Python)
+name: Run Tests for Python Problems
 
 on:
   push:
     branches:
       - main
+
+env:
+  DEFAULT_PYTHON_VERSION: 3.12
+  PROGRAMMERS_PYTHON_VERSION: 3.8
 
 jobs:
   detect-changes:
@@ -18,18 +22,25 @@ jobs:
       - name: Detect changed files
         id: detect-changes
         run: |
+          git config core.quotepath false
+          
           if git rev-parse HEAD~1 >/dev/null 2>&1; then
             base_commit="HEAD~1"
           else
             base_commit="HEAD"
           fi
-
-          changed_dirs=$(git diff --name-only $base_commit HEAD | grep '^baekjoon/python' | awk -F'/' '{print $1"/"$2"/"$3}' | sort -u || true)
+          
+          changed_dirs=$(git diff --name-only $base_commit HEAD | sed 's/^"//;s/"$//' | grep -E '.py$' | awk -F'/' '{OFS="/"; $NF=""; print $0}' | sed 's/\/$//' | sort -u || true)
 
           json="["
           for dir in $changed_dirs; do
             if [ -d "$dir" ]; then
-              json+="\"$dir\","
+              json+="{\"dir\":\"$dir\","
+              if [[ "$dir" == programmers* ]]; then
+                json+="\"python_version\":\"${{ env.PROGRAMMERS_PYTHON_VERSION }}\"},"
+              else
+                json+="\"python_version\":\"${{ env.DEFAULT_PYTHON_VERSION }}\"},"
+              fi
             fi
           done
           json="${json%,}]"
@@ -43,14 +54,14 @@ jobs:
     if: needs.detect-changes.outputs.matrix != '[]'
     strategy:
       matrix:
-        dir: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
+        include: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ matrix.python_version }}
 
       - name: Install dependencies
         run: |
